Add section content

--- a/Css Style Use/index.html
+++ b/Css Style Use/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Light Effects</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<!--commit check-->
+<div class="cube">
+    <div>
+        <span style="--i:0;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+    </div>
+</div>
 </body>
 </html>
