--- a/Css Style Use/index.html
+++ b/Css Style Use/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="cube">
+    <div class="top"></div>
     <div>
         <span style="--i:0;"></span>
         <span style="--i:1;"></span>
