--- a/Css Style Use/index.html
+++ b/Css Style Use/index.html
@@ -6,14 +6,20 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<div class="cube">
-    <div class="top"></div>
-    <div>
-        <span style="--i:0;"></span>
-        <span style="--i:1;"></span>
-        <span style="--i:2;"></span>
-        <span style="--i:3;"></span>
-    </div>
-</div>
+<main>
+    <section>
+        <div class="cube">
+            <div class="top"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
+        </div>
+    </section>
+
+
+</main>
 </body>
 </html>
