--- a/Css Style Use/index.html
+++ b/Css Style Use/index.html
@@ -18,7 +18,17 @@
             </div>
         </div>
     </section>
-
+    <section>
+        <div class="cube2">
+            <div class="top2"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
+        </div>
+    </section>
 
 </main>
 </body>
