--- a/Css Style Use/index.html
+++ b/Css Style Use/index.html
@@ -29,6 +29,17 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="cube3">
+            <div class="top3"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
+        </div>
+    </section>
 
 </main>
 </body>
